[temp]fix nested flexbox overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,8 @@
 
 .App {
     min-width: 680px;
-    min-height: 100vh;
+    height: 100vh;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -19,7 +20,7 @@
     border: 1px solid color.scale(theme.$bg-front, $whiteness: 10%);
     border-radius: .5rem;
     padding: 2rem 5rem;
-
+    min-height: 0;
     display: flex;
     flex-direction: column;
     align-items: stretch;
